# biblio

./: CMakeLists.txt  Makefile  README.md  biblio.cfg  ideas.txt  ideas_ann.txt  ideas_yana.txt  install_prereq.sh
articles/: test_summary.txt
articles/notDBLP/: test_notDBLP.txt
dblpRequest/: dblp_req.cpp
lib/googletest-master/googlemock/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-generated-actions.h  gmock-generated-function-mockers.h  gmock-generated-matchers.h  gmock-matchers.h  gmock-more-actions.h  gmock-spec-builders.h
lib/googletest-master/googlemock/include/gmock/internal/: gmock-generated-internal-utils.h  gmock-internal-utils.h
lib/googletest-master/googlemock/include/gmock/internal/custom/: gmock-generated-actions.h.pump
lib/googletest-master/googlemock/src/: gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
lib/googletest-master/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-internal-utils_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test_.cc  gmock_stress_test.cc  gmock_test.cc
lib/googletest-master/googletest/cmake/: internal_utils.cmake
lib/googletest-master/googletest/include/gtest/: gtest-death-test.h  gtest-param-test.h  gtest-printers.h  gtest.h  gtest_pred_impl.h
lib/googletest-master/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h
lib/googletest-master/googletest/samples/: prime_tables.h  sample1.cc  sample10_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
lib/googletest-master/googletest/src/: gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-test-part.cc  gtest-typed-test.cc  gtest.cc
lib/googletest-master/googletest/test/: gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-linked_ptr_test.cc  gtest-options_test.cc  gtest-param-test_test.cc  gtest-param-test_test.h  gtest-port_test.cc  gtest-printers_test.cc  gtest-typed-test_test.cc  gtest_break_on_failure_unittest_.cc  gtest_catch_exceptions_test_.cc  gtest_color_test_.cc  gtest_env_var_test_.cc  gtest_environment_test.cc  gtest_filter_unittest_.cc  gtest_list_tests_unittest.py  gtest_output_test_.cc  gtest_pred_impl_unittest.cc  gtest_repeat_test.cc  gtest_stress_test.cc  gtest_unittest.cc  gtest_xml_outfile1_test_.cc  gtest_xml_outfile2_test_.cc  gtest_xml_output_unittest_.cc  production.h
lib/json/: jsoncpp.cpp
lib/tinydir/samples/: cpp_sample.cpp
lib/tinydir/samples/tmp/: list_to_file
src/: ArticleInfo.cpp  ArticleInfo.h  ArxivRequester.cpp  ArxivRequester.h  BiblioException.h  BiblioManager.cpp  BiblioManager.h  BiblioThreadContext.cpp  BiblioThreadContext.h  Biblio_exception.cpp  Biblio_exception.h  Config.cpp  Config.h  DBLPManager.cpp  DBLPManager.h  DBLPRequester.cpp  DBLPRequester.h  Database.cpp  Database.h  NatureRequester.cpp  NatureRequester.h  Parser.cpp  Parser.cpp~  Parser.h  Parser.h~  PictureParser.cpp  PictureParser.h  Requester.cpp  Requester.h  RequesterManager.cpp  RequesterManager.h  ScienceDirectRequester.cpp  ScienceDirectRequester.h  ScopusRequester.cpp  ScopusRequester.h  SpringerRequester.cpp  SpringerRequester.h  find_info.cpp  find_info.cpp~  find_info.h  (+8 more)
src/Requesters/: ArxivRequester.cpp  ArxivRequester.h  DBLPRequester.cpp  DBLPRequester.h  NatureRequester.cpp  NatureRequester.h  Requester.cpp  Requester.h  ScienceDirectRequester.cpp  ScienceDirectRequester.h  ScopusRequester.cpp  ScopusRequester.h  SpringerRequester.cpp  SpringerRequester.h
test/: CMakeLists.txt  DBLP_unittest.cpp  Picture_Parser_title_unittest.cpp  Simple_Parser_title_unittest.cpp  bibliotest.cpp
test_poppler/: Makefile  Makefile~  compile.sh  main  main.cpp  main.cpp~  parser.cpp  parser.cpp~  parser.h  parser.h~  tools.cpp  tools.cpp~  tools.h  tools.h~
tex/: Makefile  biblio.aux  biblio.bib  biblio.blg  biblio.tex
